fix #92 cards flick on mobile home page load

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -1348,7 +1348,7 @@ p.content a {
     .cards {
         position: absolute;
         left: 0px;
-        top: 0px;
+        top: 600px;
         height: 100%;
         overflow: hidden;
         &:after {
